# pekwm

./: .dockerignore  .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.aewm++  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.md  PACKAGERS  README  README.aewm++  README.md  ROADMAP  TODO  TODO-0.1.2  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  nfpm.yaml.in  pekwm.spec  pekwm.spec.in  pkg.sh
data/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  autoproperties  autoproperties_clientrules  autoproperties_typerules  autoprops  config  config.in  config_system  keys  keys_inputdialog  keys_menu  keys_moveresize  menu  menu.in  menu_windowmenu  mouse  mouse_sloppy  mouse_system  panel  start  vars
data/icons/: CMakeLists.txt  Makefile.am
data/scripts/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  pekwm-filter.sh  pekwm_audio_ctrl.sh.in  pekwm_lock.sh.in  pekwm_panel_battery.sh.in  pekwm_screenshot.sh  pekwm_theme.in  pekwm_themeset.pl  pekwm_themeset.sh  pekwm_themeset.sh.in  pekwm_toggle_kbd_layout.sh.in  pekwm_window_info.sh  pekwm_ws_menu.pl  pekwm_ws_menu.sh  pekwm_ws_menu.sh.in
data/themes/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
doc/: CMakeLists.txt  Makefile  Makefile.am  README.md  actions.md  autoproperties.md  basic-usage.md  configuration.md  development.md  faq.md  index.in.xml  overview.md  pekwm.1  pekwm.1.md  pekwm_bg.1  pekwm_bg.1.md  pekwm_dialog.1  pekwm_dialog.1.md  pekwm_panel.1  pekwm_panel.1.md  pekwm_panel.md  pekwm_screenshot.1  pekwm_screenshot.1.md  pekwm_theme.1  pekwm_theme.1.md  themes.md
doc/book/: abstract.xml  authorgroup.xml  book.ent  book.xml  bookinfo.xml  copyright.xml  legalnotice.xml
doc/config/: config.ent  config.xml
doc/css/: pekwm-docs.css
doc/development/: development.ent  development.xml
doc/faq/: faq.ent  faq.xml
doc/overview/: overview.ent  overview.xml
doc/tools/: custom.dsl  empty  index.php  mkdocs.sh  mkdulink.pl  mklink.pl  pekwm.dsl  version  version-process.pl
doc/usage/: usage.ent  usage.xml
src/: .cvsignore  Action.cc  Action.hh  ActionHandler.cc  ActionHandler.hh  ActionMenu.cc  ActionMenu.hh  AppCtrl.hh  Atoms.cc  Atoms.hh  AutoProperties.cc  AutoProperties.hh  BaseConfig.cc  BaseConfig.hh  BaseMenu.cc  BaseMenu.hh  Button.cc  Button.hh  CMakeLists.txt  CfgParser.cc  CfgParser.hh  CfgParserKey.cc  CfgParserKey.hh  CfgParserSource.cc  CfgParserSource.hh  CfgParserVarExpander.cc  CfgParserVarExpander.hh  CfgParserVarExpanderX11.cc  CfgParserVarExpanderX11.hh  CfgUtil.cc  CfgUtil.hh  Charset.cc  Charset.hh  Client.cc  Client.hh  ClientMgr.cc  ClientMgr.hh  CmdDialog.cc  CmdDialog.hh  Color.cc  (+231 more)
src/bg/: CMakeLists.txt  Makefile.am  TextureLinesAngle.hh  pekwm_bg.cc
src/cfg/: CMakeLists.txt  Makefile.am  pekwm_cfg.cc
src/ctrl/: CMakeLists.txt  Makefile.am  pekwm_ctrl.cc
src/dialog/: CMakeLists.txt  Makefile.am  pekwm_dialog.cc  pekwm_dialog.hh
src/lib/: CMakeLists.txt  Calendar.cc  Calendar.hh  CfgParser.cc  CfgParser.hh  CfgParserKey.cc  CfgParserKey.hh  CfgParserSource.cc  CfgParserSource.hh  CfgParserVarExpander.cc  CfgParserVarExpander.hh  CfgParserVarExpanderX11.cc  CfgParserVarExpanderX11.hh  Charset.cc  Charset.hh  Compat.cc  Compat.hh  Cond.cc  Cond.hh  Container.hh  Daytime.cc  Daytime.hh  Debug.cc  Exception.hh  Geometry.cc  Geometry.hh  HttpClient.cc  HttpClient.hh  Iter.hh  Json.cc  Json.hh  Location.cc  Location.hh  Makefile.am  Md5.cc  Md5.hh  Mem.hh  Observable.cc  Observable.hh  Os.cc  (+17 more)
src/panel/: BarWidget.cc  BarWidget.hh  CMakeLists.txt  ClientInfo.cc  ClientInfo.hh  ClientListWidget.cc  ClientListWidget.hh  DateTimeWidget.hh  ExternalCommandData.cc  ExternalCommandData.hh  IconWidget.cc  IconWidget.hh  Makefile  Makefile.am  PanelAction.hh  PanelConfig.cc  PanelConfig.hh  PanelTheme.cc  PanelTheme.hh  PanelWidget.cc  PanelWidget.hh  SystrayWidget.cc  SystrayWidget.hh  TextFormatter.cc  TextFormatter.hh  TextWidget.cc  TextWidget.hh  VarData.cc  VarData.hh  WidgetFactory.cc  WidgetFactory.hh  WmState.cc  WmState.hh  pekwm_panel.cc  pekwm_panel.hh  pekwm_panel_sysinfo.c
src/screenshot/: CMakeLists.txt  Makefile.am  pekwm_screenshot.cc
src/show/: CMakeLists.txt  pekwm_show.cc  pekwm_show.hh
src/sys/: CMakeLists.txt  Makefile.am  SysConfig.cc  SysConfig.hh  SysMonitorChange.cc  SysMonitorChange.hh  SysMonitorConfig.cc  SysMonitorConfig.hh  SysResources.cc  SysResources.hh  XSettings.cc  XSettings.hh  pekwm_sys.cc  pekwm_sys.hh
src/tk/: Action.cc  Action.hh  CMakeLists.txt  CfgUtil.cc  CfgUtil.hh  Color.cc  Color.hh  ColorPalette.cc  ColorPalette.hh  FontHandler.cc  FontHandler.hh  Hooks.cc  Hooks.hh  ImageHandler.cc  ImageHandler.hh  Makefile.am  PFont.cc  PFont.hh  PFontPango.cc  PFontPango.hh  PFontPangoCairo.cc  PFontPangoCairo.hh  PFontPangoXft.cc  PFontPangoXft.hh  PFontX.cc  PFontX.hh  PFontX11.cc  PFontX11.hh  PFontXft.cc  PFontXft.hh  PFontXmb.cc  PFontXmb.hh  PImage.cc  PImage.hh  PImageIcon.cc  PImageIcon.hh  PImageLoaderJpeg.cc  PImageLoaderJpeg.hh  PImageLoaderPng.cc  PImageLoaderPng.hh  (+36 more)
src/wm/: ActionHandler.cc  ActionHandler.hh  ActionMenu.cc  ActionMenu.hh  AutoProperties.cc  AutoProperties.hh  CMakeLists.txt  Client.cc  Client.hh  ClientMgr.cc  ClientMgr.hh  CmdDialog.cc  Completer.cc  Completer.hh  Config.cc  Config.hh  DockApp.cc  FocusToggleEventHandler.cc  (+39 more)
test/: CMakeLists.txt  Makefile.am  test.hh  test_Action.cc  test_Action.hh  test_ActionHandler.hh  test_AutoProperties.hh  test_Calendar.hh  test_CfgParser.cc  test_CfgParser.hh  test_Charset.hh  test_ColorPalette.hh  test_Cond.hh  test_Config.cc  test_Config.hh  test_Daytime.hh  test_ExternalCommandData.hh  test_FontHandler.hh  test_Frame.cc  test_Frame.hh  test_Geometry.hh  test_InputDialog.hh  test_Json.hh  test_Location.hh  test_ManagerWindows.cc  test_ManagerWindows.hh  test_Md5.hh  test_Mem.hh  test_Mock.hh  test_Observable.hh  test_Os.hh  test_PFont.hh  test_PFontPango.hh  test_PFontXmb.hh  test_PImage.hh  test_PMenu.hh  test_PSurface.hh  test_PekwmSys.hh  test_RegexString.hh  test_String.hh  (+22 more)
(+247 files in other folders)
